# cits3001

./: .gitignore  README.md  test.py
MonteCarlo/: .gitignore  agent.py  demofile.txt  internet.py  levelwalkthroughs.txt  main.py  performance.py  pyproject.toml  requirements.txt  test.py
MonteCarlo/MCTS_Algorithm_FINAL/: README.md  agent.py  main.py
Qlearning/: agent.py  constants.py  finalplot.py  logger.py  main.py  network.py  performance.py  plot.py  preprocess.py  pyrl.py  requirements.txt  state.py  train.py
Qlearning/submissionfolder/: agent.py  logger.py  network.py  preprocess.py
